@@ -1,3 +1,8 @@
+2005-10-20  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/jacl/tcl/lang/TclParserExtension.java:
+	Reformat to replace DOS CRLF with LF.
+
 2005-10-19  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* src/jacl/tcl/lang/CharPointer.java:
